--- a/app/sass/bootstrap.scss
+++ b/app/sass/bootstrap.scss
@@ -6,7 +6,7 @@
  */
 
 @import "./bootstrap/functions";
-@import "./bootstrap/variables";
+@import "./_variables";
 @import "./bootstrap/mixins";
 @import "./bootstrap/root";
 @import "./bootstrap/reboot";
@@ -24,7 +24,7 @@
 @import "./bootstrap/custom-forms";
 @import "./bootstrap/nav";
 @import "./bootstrap/navbar";
-@import "./bootstrap/card";
+@import "./_card";
 @import "./bootstrap/breadcrumb";
 @import "./bootstrap/pagination";
 @import "./bootstrap/badge";
@@ -40,3 +40,6 @@
 @import "./bootstrap/carousel";
 @import "./bootstrap/utilities";
 @import "./bootstrap/print";
+
+// custom
+@import "./subtitle";
